--- a/Class/0621 수업.md
+++ b/Class/0621 수업.md
@@ -30,7 +30,7 @@
 * category (어떠한 것들을 분류 할 때) 를 사용할 때 abstract 클래스를 사용한다 (추상 : 특징(내가 필요로 하는 부분)을 끄집어 내는 것)
 * field 를 사용하려면 초기화 부분을 신경 써줘야한다
 
-* 메멘토 패턴 : 내가 필요한 부분만 캡슐화해서 보관하고 사용하는 기법 
+* 메멘토 패턴 : 내가 필요한 부분만 캡슐화해서 보관하고 사용하는 기법
 * casting 할때는 as 키워드를 사용해야 한다
 * Kotlin은 중첩 클래스가 기본이다
 * try - catch를 사용하지 않아도 된다, 반드시 예외를 처리할 필요가 없다 (하지만 고민을 해봐야한다, 예외가 없어지는게 아니라 잠재적 오류가 존재할 수 있다)
@@ -62,7 +62,7 @@
 * 싱글톤 : 인자로 전달하지 않아도 되기 때문에 간편하다, 하지만 누구나 접근할 수 있으므로 생각치도 못한 에러가 발생하고, 강한 결합이 발생한다
 * 1. private 생성자로 만들어야 한다
 * 2. 객체를 생성하지 않고도 접근할 수 있어야 하므로 private static final 을 사용해야 한다
-* 리플렉션 reflexion 과 직렬화를 깨트리고 있다, 그러므로 enum 싱글톤을 만들어야한다
+* 리플렉션 reflection 과 직렬화를 깨트리고 있다, 그러므로 enum 싱글톤을 만들어야한다
 * enum 싱글톤의 문제점 : 생성하는 비용이 크므로 프로그램이 구동될때 생성해야 하므로 악영향을 끼친다
 * 지연 초기화 싱글톤 : 동시에 두개 이상의 스레드가 호출할 경우, 문제가 발생할 수 있다, 그러므로 동기화를 생각해야한다
 * 객체를 생성하는 것은 비용이 크다, 참조를 비교하는 것은 비교적 훨씬 쉽다
