--- a/Class/서비스.md
+++ b/Class/서비스.md
@@ -3,7 +3,7 @@
 * 서비스는 자신의 호스팅 프로세스의 기본 스레드에서 실행된다
 * 서비스는 자신의 스레드를 직접 생성하지 않으며, 별도의 프로세스에서 실행되지도 않는다
 * 서비스가 CPU 집약적인 작업을 수행할 예정이거나 차단 작업을 수행할 예정인 경우, 서비스 내에 새 스레드를 생성하여 해당 작업을 수행하도록 해야 한다
-* 서비스를 생성하려면 Service 의 하위 클래스를 생성해야 한다
+* 서비스를 생성하려면 하위 클래스를 생성해야 한다
 * 구현에서는 서비스 수명 주기의 주요 측면을 처리하는 콜백 메서드를 몇 가지 재정의해야 하며 서비스에 바인딩할 구성 요소에 대한 메커니즘을 제공해야 한다
 
 ### 포그라운드
